eval/case_6/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner-gatewayclass
spec:
  controllerName: stunner.l7mp.io/gateway-operator
  parametersRef:
    group: stunner.l7mp.io
    kind: GatewayConfig
    name: stunner-gatewayconfig
    namespace: stunner
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-premium-gateway
  namespace: stunner
  annotations:
    stunner.l7mp.io/service-type: LoadBalancer
spec:
  gatewayClassName: stunner-gatewayclass
  listeners:
    - name: udp-listener
      port: 3478
      protocol: TURN-UDP
